add db metrics endpoint
